Updated depencencies + added keyboard trap to prevent tabbing out of the container

--- a/src/ResourceList.scss
+++ b/src/ResourceList.scss
@@ -40,7 +40,7 @@ $borderRadius: 5px;
   {
     .h5p-resource-list-element {
       div {
-        flex-direction: row-reverse;
+        flex-direction: row;
       }
 
       .h5p-resource-list-introduction-image {
